@@ -1,3 +1,4 @@
+* Login Logout: fix issue of report export displaying only a single page.
 * Login Logout: add consistency checks on audit records to counter the situation
   where an abnormal termination of the dialer leaves unclosed audit records.
   Inconsistent records are now displayed as CORRUPTED instead of adding invalid
